--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -8,7 +8,7 @@
 \chapter{Tableaux et graphiques complémentaires \label{chap:anx_img_complement}}
 
 \section{Ensemble des données}
-L'ensemble des données utilisées pour réaliser ces travaux sont présentées dans cette section. L'ensemble des scanners des 2 patients, \Nber et \Chen, sont présentés ici. On présentera ensuite l'ensemble des histogrammes des niveaux de gris, correspondant à la zone tumorale contourée manuellement sur les scanners.
+L'ensemble des données utilisé pour réaliser ces travaux est présenté dans cette section. L'ensemble des scanners des 2 patients, \Nber et \Chen, est présenté ici. On présentera ensuite l'ensemble des histogrammes des niveaux de gris, correspondant à la zone tumorale contourée manuellement sur les scanners.
 
 \newpage
 %%\section{Ensemble des données}
@@ -195,7 +195,7 @@ Sur la figure ci-dessous, on peut visualiser l'ensemble des scanners réalisés 
 \FloatBarrier
 %%\section{Histogrammes cliniques}
 \subsection{Histogrammes cliniques de \Nber}
-Ci-dessous est présenté l'ensemble des histogrammes numérique de \Nber, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageNber}).\vspace{-10mm}
+Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Nber, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageNber}).\vspace{-10mm}
 
 \newlength{\largeurhisto}
 \setlength{\largeurhisto}{0.24\textwidth}
@@ -224,12 +224,12 @@ Ci-dessous est présenté l'ensemble des histogrammes numérique de \Nber, corre
 \subfloat[Jour 1053]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_04_08_histo.png}}\ 
 \subfloat[Jour 1116]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_06_10_histo.png}}\ 
 \subfloat[Jour 1179]{\includegraphics[width=\largeurhisto]{histo_dcm/Nber_2011_08_12_histo.png}}
-\caption{\label{fig:histo_dcm_Nber} Histogramme clinique de la tumeur de \Nber. }
+\caption{\label{fig:histo_dcm_Nber} Histogrammes cliniques de la tumeur de \Nber. }
 \end{figure}
 
 \FloatBarrier
 \subsection{Histogrammes cliniques de \Chen}
-Ci-dessous est présenté l'ensemble des histogrammes numérique de \Nber, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageNber}).\vspace{-10mm}
+Ci-dessous est présenté l'ensemble des histogrammes cliniques de \Chen, correspondant au niveaux de gris des régions contourées sur les scanners (\cf Figure~\ref{fig:contourageChen}).\vspace{-10mm}
 
 \begin{figure}[h!]
 \captionsetup[subfigure]{labelformat=simple, labelsep=colon}
@@ -256,7 +256,7 @@ Ci-dessous est présenté l'ensemble des histogrammes numérique de \Nber, corre
 \subfloat[Jour 1415]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_04_07_histo.png}}\ 
 \subfloat[Jour 1458]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_05_20_histo.png}}\ 
 \subfloat[Jour 1510]{\includegraphics[width=\largeurhisto]{histo_dcm/Chen_2011_07_11_histo.png}}\
-\caption{\label{fig:histo_dcm_Chen} Histogramme clinique de la tumeur de \Chen. }
+\caption{\label{fig:histo_dcm_Chen} Histogrammes cliniques de la tumeur de \Chen. }
 \end{figure}
 
 \clearpage
