--- a/manuscrit_G_LEFEBVRE/conclusion.tex
+++ b/manuscrit_G_LEFEBVRE/conclusion.tex
@@ -5,7 +5,7 @@
 \specialchap{Conclusion}
 
 
-\lettrine{D}{ans} ce manuscrit nous avons fourni un modèle, basé sur des EDPs, dont les paramètres sont propres à chaque patient. Il décrit le comportement global de métastases hépatiques de GISTs durant les différentes étapes de son évolution. Nous avons présenté les méthodes numériques utilisées pour résoudre le système d'EDPs et nous avons introduit un nouveau type de schéma WENO5, appelé \twinweno, pour faire face à une instabilité numérique. Notons que cette instabilité a été mise en évidence sur des cas de simulations particuliers auxquels nous sommes confronté~: une modélisation de croissance tumorale sur du long terme avec deux types de traitements différents et induisant de forts rétrécissement de l'aire tumorale. 
+\lettrine{D}{ans} ce manuscrit nous avons fourni un modèle, basé sur des EDPs, dont les paramètres sont propres à chaque patient. Il décrit le comportement global de métastases hépatiques de GISTs durant les différentes étapes de son évolution. Nous avons présenté les méthodes numériques utilisées pour résoudre le système d'EDPs et nous avons introduit un nouveau type de schéma WENO5, appelé \twinweno, pour faire face à une instabilité numérique. Notons que cette instabilité a été mise en évidence sur des cas de simulations particuliers auxquels nous sommes confrontés~: une modélisation de croissance tumorale sur du long terme avec deux types de traitements différents et induisant de forts rétrécissements de l'aire tumorale. 
 
 
 \paragraph{}
@@ -15,7 +15,14 @@ Figure~\ref{fig:fit_area_henbert}, notre modèle fournit des résultats qui sont
 Il est intéressant de noter que nos simulations numériques font apparaître une couronne de cellules proliférantes sur le pourtour de la tumeur juste avant la rechute. Ceci semble corroboré dans les scanners par l'augmentation de l'hétérogénéité tumorale, au sens des niveaux de gris, avant la rechute. Plus la métastase est hétérogène, plus la rechute est imminente. Ce résultat souligne le fait que le critère RECIST n'est pas suffisant pour évaluer l'efficacité d'un traitement.
 
 \paragraph{}
-Nous avons également toucher du doigt avec notre modèle, le fait qu'il existe une dose minimale de traitement pour qu'il y ait un effet. A l'inverse, trop traiter, n'améliore pas la survie globale du patient (survie sans aggravation) comme le montre la Figure~\ref{fig:eff_glivec_nber}. Notre modèle conforte donc l'hypothèse qu'il existe une dose optimale de traitement. Cependant il ne peut pas être utilisé pour déterminer cet optimum car il n'est pas prédictif. En effet, comme expliqué par la Figure~\ref{fig:possibilites2}, on peut voir que des comportements très différents à long terme peuvent être obtenus avec le même comportement durant les 400 premiers jours (on peut trouver différents jeux de paramètres qui donnent le même comportement initial). Il n'est pas possible de déterminer par exemple la quantité de cellules résistantes à un instant donné à partir de l'imagerie. De même pour la densité du système vasculaire environnant. Ceci signifie que des données plus précises, comme de l'imagerie fonctionnelle (TEP-scan ou IRM), ou encore éventuellement des biopsies, devront être nécessaires pour une meilleure analyse de la structure interne de la métastase. Ce nouveau type de données pourraient ainsi enrichir le présent modèle.
+Nous avons également touché du doigt avec notre modèle, le fait qu'il existe une dose minimale de traitement pour qu'il y ait un effet. A l'inverse, trop traiter, n'améliore pas la survie globale du patient (survie sans aggravation) comme le montre la Figure~\ref{fig:eff_glivec_nber}. 
+Notre modèle conforte donc l'hypothèse qu'il existe une dose optimale de traitement. 
+Cependant il ne peut pas être utilisé pour déterminer cet optimum car il n'est pas prédictif. 
+En effet, comme expliqué par la Figure~\ref{fig:possibilites2}, 
+%on peut voir que 
+des comportements très différents à long terme peuvent être obtenus avec le même comportement durant les 400 premiers jours (on peut trouver différents jeux de paramètres qui donnent le même comportement initial). 
+Il n'est pas possible de déterminer par exemple la quantité de cellules résistantes à un instant donné à partir de l'imagerie. De même pour la densité du système vasculaire environnant. 
+Ceci signifie que des données plus précises, comme de l'imagerie fonctionnelle (TEP-scan ou IRM), ou encore éventuellement des biopsies, sont nécessaires pour une meilleure analyse de la structure interne de la métastase. Ce nouveau type de données pourrait ainsi enrichir le présent modèle.
 
 
 \paragraph{}
@@ -26,7 +33,7 @@ synthèse d'images scanners ont finalement été optimisés et ont permis la gé
 
 
 \paragraph{}
-Un critère quantifiant l'\hetero a également été construit à partir de l'analyse de l'intensité des niveaux de gris des pixels contenus dans les images. Robuste, il permet d'attribuer un pourcentage d'\hetero a une tumeur présente sur une image quelconque, qu'elle soit médicale ou qu'elle provienne  de la simulation numérique. Il permet ainsi de quantifier ce qui restait jusqu'alors à l'appréciation personnelle de celui qui regarde les images. Pour \Nber, ce critère met en avant la proximité de l'évolution de l'\hetero clinique avec celle constatée sur les simulations numériques. Cependant, pour \Chen, ce quantificateur de l'\hetero démontre les limites du modèle EDP : l'\hetero n'est ici pas bien décrite. La sensibilité du modèle vis à vis de la condition initiale semble donc importante. Le fait que celle-ci soit choisie  homogène, alors que la donnée ne l'est pas biaise donc l'ensemble de la simulation numérique. Pour palier à cela, il faudrait alors être capable de créer des conditions initiales qui soient cliniquement consistantes et en accord avec l'imagerie. Et le problème est bien là... Admettons que l'on considère une condition initiale avec de la nécrose à un endroit donné. Il se pose d'abord le problème de savoir quelle quantité en mettre puisque celle-ci n'est pas déterminable à partir des scanners. Ensuite une telle configuration  signifie que l'endroit nécrosé en question n'est pas suffisamment vascularisé. On ne peut donc pas considérer une vascularisation initiale constante dans ce cas. Comment la choisir alors ?
+Un critère quantifiant l'\hetero a également été construit à partir de l'analyse de l'intensité des niveaux de gris des pixels contenus dans les images. Robuste, il permet d'attribuer un pourcentage d'\hetero a une tumeur présente sur une image quelconque, qu'elle soit médicale ou qu'elle provienne  de la simulation numérique. Il permet ainsi de quantifier ce qui restait jusqu'alors à l'appréciation personnelle de celui qui regarde les images. Pour \Nber, ce critère met en avant la proximité de l'évolution de l'\hetero clinique avec celle constatée sur les simulations numériques. Cependant, pour \Chen, ce quantificateur de l'\hetero démontre les limites du modèle EDP : l'\hetero n'est ici pas bien décrite. La sensibilité du modèle vis-à-vis de la condition initiale semble donc importante. Le fait que celle-ci soit choisie  homogène, alors que la donnée ne l'est pas biaise donc l'ensemble de la simulation numérique. Pour palier à cela, il faudrait alors être capable de créer des conditions initiales qui soient cliniquement consistantes et en accord avec l'imagerie. Et le problème est bien là... Admettons que l'on considère une condition initiale avec de la nécrose à un endroit donné. Il se pose d'abord le problème de savoir quelle quantité en mettre puisque celle-ci n'est pas déterminable à partir des scanners. Ensuite une telle configuration  signifie que l'endroit nécrosé en question n'est pas suffisamment vascularisé. On ne peut donc pas considérer une vascularisation initiale constante dans ce cas. Comment la choisir alors ?
 
 
 \paragraph{}
@@ -39,7 +46,7 @@ Dans le cas de figure où l'on aurait des données sur une large cohorte de pati
 Enfin, un nouveau modèle dans lequel l'\hetero serait une variable à part entière pourrait également être construit et pourrait éventuellement permettre de réduire le nombre d'inconnues sur lesquelles nous n'avons pas de données.
 
 \paragraph{}
-La modélisation de résistance aux traitements anticancéreux est une nécessité. Les travaux présentés ici constituent un premier pas non négligeable en ce sens. 
+La modélisation de résistances aux traitements anticancéreux est une nécessité. Les travaux présentés ici constituent un premier pas non négligeable en ce sens. 
 De tels travaux doivent être poursuivis de sorte à ce que la modélisation mathématique apporte à terme un gain clinique, que ce soit par le biais d'aide au diagnostic grâce à de nouveaux critères ou par le biais d'outils de pronostics ou par d'autre biais encore.
 
 \end{document}
