--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -18,7 +18,7 @@ En 2012, l'OMS\footnote{Organisation Mondiale de la Santé} attribuait à cette 
 \paragraph{}
 De nombreuses études fondamentales, pré-cliniques ou cliniques ont déjà été réalisées afin de mieux comprendre les mécanismes impliqués dans la genèse et le développement du cancer. De même, de nombreux travaux ont permis d'apprécier la réponse aux traitements. Toutefois, il persiste encore beaucoup d'interrogations sur cette maladie. De nouvelles méthodes d'exploration et de compréhension sont donc nécessairement à développer.
 % Bien que de nombreuses recherches soient financées sur le sujet, beaucoup d'interrogations règnent encore sur cette maladie. 
- D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problème physique, chimique, biologique, épidémiologique, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patient ? 
+ D'un autre côté, les mathématiques ont pris une place omniprésente dans la vie de tous les jours au travers de la modélisation~: aéronautique, aérospatial, automobile ... Elles sont capables de modéliser un très large spectre de problèmes physiques, chimiques, biologiques, épidémiologiques, etc. Pourquoi ne pas les utiliser pour modéliser la croissance tumorale ? pour prédire les rechutes aux traitements ? pour personnaliser les traitements à chaque patient ? 
  
 \paragraph{}
 Les travaux présentés ici s'inscrivent pleinement dans cette démarche. Ils constituent un premier pas dans la modélisation de résistance aux traitements, basée sur des images cliniques. 
@@ -29,7 +29,7 @@ hépatiques en provenance d'une
 tumeur stromale\footnote{Le stroma est un tissu de soutien, non impliqué dans la fonction première de l'organe.} de l'intestin grêle
 %cancer du stroma\footnote{Tissu de soutien, non impliqué dans la fonction première de l'organe.} gastroinstestinal  
 (GIST).
-Ce type de cancer touche de 9 à 14 cas par million de personnes par an~\cite{Nilsson2005}. Dans 25\% des cas, ce cancer migre vers le foie~\cite{dematteo2000}. 
+Ce type de cancer touche de 9 à 14 personnes sur un million par an~\cite{Nilsson2005}. Dans 25\% des cas, ce cancer migre vers le foie~\cite{dematteo2000}. 
 %%Ces métastases sont connues pour être relativement résistantes aux traitements anti-cancéreux, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
 %Ces métastases peuvent être résistantes aux traitements conventionnels comme la chimiothérapie ou la radiothérapie. Ainsi d'autres thérapeutiques ont été proposées comme les inhibiteurs de la tyrosine kinase ou les traitements anti-angiogéniques.  Malheureusement, en fonction des mutations rencontrées ou acquises, des résistances à ces traitements peuvent également être rencontrées sur ce type de métastases, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
 En fonction des mutations rencontrées ou acquises, ces métastases peuvent être résistantes aussi bien aux traitements conventionnels (comme la chimiothérapie ou la radiothérapie) qu'aux nouvelles thérapies ciblées (comme les inhibiteurs de la tyrosine kinase ou les traitements anti-angiogéniques), ce qui donne un intérêt certain à la modélisation de leurs comportements. 
@@ -37,7 +37,7 @@ Notre but ici, est de construire un modèle qui reproduise qualitativement et qu
 
 \paragraph{}
 Le suivi clinique des patients sous traitement est assuré par des scanners réguliers, réalisés généralement tous les deux mois. Ceux-ce constituent la seule et unique source d'informations cliniques dont nous disposons ici.  
-A l'heure actuelle, pour mesurer l'efficacité d'un traitement, le corps médical utilise le critère RECIST, qui consiste à ne retenir des images médicales que le diamètre de la plus large lésion. L'information retenue semble donc très faible au regard de toutes celles contenues dans les scanners. Plusieurs études ont déjà montrées ses limitations, en particulier lors de traitements anti-angiogénique REFFF. L'imagerie fait apparaître bien d'autres particularités, notamment l'\hetero tumorale à laquelle nous nous intéresserons tout au long de ce manuscrit. L'\hetero peut-elle être liée à l'émergence de populations cellulaires résistantes ? Peut-on reproduire ce caractère par la modélisation ? Comment la quantifier ?
+A l'heure actuelle, pour mesurer l'efficacité d'un traitement, le corps médical utilise le critère RECIST, qui consiste à ne retenir des images médicales que le diamètre de la plus large lésion. L'information retenue semble donc très faible au regard de toutes celles contenues dans les scanners. Plusieurs études ont déjà montrées ses limitations, en particulier lors de traitements anti-angiogéniques REFFF. L'imagerie fait apparaître bien d'autres particularités, notamment l'\hetero tumorale à laquelle nous nous intéresserons tout au long de ce manuscrit. L'\hetero peut-elle être liée à l'émergence de populations cellulaires résistantes ? Peut-on reproduire ce caractère par la modélisation ? Comment la quantifier ?
 %La principale particularité à laquelle nous nous intéresserons sera l'\hetero tumorale. Quelles sont les informations sur le comportement de la tumeur que l'ont peut extraire de l'imagerie médicale ? Les critères actuels de lecture de l'imagerie médicale sont-ils suffisant ? L'\hetero peut-elle apportée une information supplémentaire ? 
 
 
@@ -47,7 +47,7 @@ A l'heure actuelle, pour mesurer l'efficacité d'un traitement, le corps médica
 Les interrogations précédemment posées seront abordées dans ce manuscrit au travers de ses différents chapitres. 
 
 \paragraph{}
-Le premier chapitre est dédié à la présentation des aspects biologiques et cliniques du cancer.  Il présente non pas de manière exhaustive tous les mécanismes du cancer, mais ceux nécessaires à la compréhension des choix réalisés dans la modélisation. La croissance d'une tumeur sera d'abord présentée. Puis, la manière dont les métastases se disséminent sera abordée. Les différents types de traitements seront ensuite présentés. La seule et unique source d'informations cliniques que nous ayons étant des images scanners, nous nous devons de comprendre comment ce type d'image est acquis. Nous discuterons ensuite du critère RECIST et de ses limitations avant de terminer par les spécificités des métastases hépatiques de GISTs.
+Le premier chapitre est dédié à la présentation des aspects biologiques et cliniques du cancer.  Il présente non pas de manière exhaustive tous les mécanismes du cancer, mais ceux nécessaires à la compréhension des choix réalisés dans la modélisation. La croissance d'une tumeur sera d'abord présentée. Puis, la manière dont les métastases se disséminent sera abordée. Les différents types de traitements seront ensuite présentés. La seule et unique source d'informations cliniques que nous ayons étant des images scanners, nous nous devons de comprendre comment ce type d'images est acquis. Nous discuterons ensuite du critère RECIST et de ses limitations avant de terminer par les spécificités des métastases hépatiques de GISTs.
 
 
 \paragraph{}
@@ -55,7 +55,7 @@ Dans le second chapitre, nous présentons le modèle, qui consiste en un systèm
 les modèles basés sur des équations différentielles ordinaires (EDOs), comme les modèles de Mendelsohn, de Gompertz ou de 
 Bertalanffy, permettent de suivre la croissance de l'aire tumorale mais ils ne considèrent aucun aspect spatial de cette croissance. Nous en référons à l'analyse de Benzekry {\it et al.} pour plus de détails sur de tels modèles 1D~\cite{benzekry2014}. 
 Notre modèle est dans le même esprit que celui de Ribba~{\it et
-  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour décrire l'évolution de la maladie. La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second à un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensibles aux deux traitements, un autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
+  al.}~\cite{Ribba2006532} -- nous vous renvoyons également à~\cite{Iollo2012,gallinato2014} -- pour décrire l'évolution de la maladie. La principale nouveauté du modèle réside en la description des traitements. Deux traitements sont considérés~: le premier traitement a un effet cytotoxique alors que le second à un effet à la fois cytotoxique et antiangiogénique. Trois populations de cellules proliférantes sont utilisées pour décrire la résistance aux traitements~: une population de cellules sensible aux deux traitements, une autre sensible uniquement au second traitement et une dernière résistante aux deux traitements.  
 Nous incorporons également un modèle simple d'angiogenèse puisqu'elle joue un rôle crucial dans la croissance métastatique.
 
 
@@ -73,7 +73,7 @@ Les résultats de ce second chapitre sont un premier pas vers la compréhension 
 
 
 \paragraph{}
-Dans un troisième chapitre, les aspects numériques seront abordés. En particulier, il a fallu faire face à une instabilité numérique que l'on présentera et à laquelle l'équipe n'a jamais été confrontée avec les schémas classiques qu'elle utilisait. Nous étudions ici des croissances de tumeurs avec traitement, sur du long terme et avec de fort rétrécissement de la taille induit par les traitements. Ce sont là autant de raisons qui présentent l'originalité du problème. Nous montrerons que les champs de vitesses non communs obtenus lors de la simulation numérique  sont à l'origine des instabilités numériques. Enfin un nouveau schéma de transport sera proposé, le \twinweno, pour palier à cette instabilité.
+Dans un troisième chapitre, les aspects numériques seront abordés. En particulier, il a fallu faire face à une instabilité numérique que l'on présentera et à laquelle l'équipe n'a jamais été confrontée avec les schémas classiques qu'elle utilisait. Nous étudions ici des croissances de tumeurs avec traitement, sur du long terme et avec de forts rétrécissements de la taille induit par les traitements. Ce sont là autant de raisons qui présentent l'originalité du problème. Nous montrerons que les champs de vitesses non communs obtenus lors de la simulation numérique  sont à l'origine des instabilités numériques. Enfin un nouveau schéma de transport sera proposé, le \twinweno, pour palier à cette instabilité.
 
 
 \paragraph{}
@@ -99,7 +99,7 @@ composantes gaussiennes, va ainsi traduire le caractère \heterogene de la méta
 Il sera construit en se basant sur les scanners du premier patient (\Nber) uniquement. 
 Le second patient (\Chen) sera gardé à titre de vérification, pour valider le critère. 
 Une fois le critère construit, il sera appliqué également aux images produites par la simulation numérique. 
-La robustesse du critère vis à vis de la paramétrisation choisie pour la synthèse des images  numériques sera présentée. 
+La robustesse du critère vis-à-vis de la paramétrisation choisie pour la synthèse des images  numériques sera présentée. 
 Ce critère montrera notamment les limites du modèle EDP en terme de reproduction de l'\hetero tumorale.
 
 \paragraph{}
