--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -8,6 +8,7 @@
 \newcommand{\heterogenes}{hétérogènes\xspace}
 \newcommand{\Nber}{Patient~A\xspace}
 \newcommand{\Chen}{Patient~B\xspace}
+\newcommand{\cad}{c'est-à-dire\xspace}
 \newcommand{\ie}{{\it i.e.}\xspace}
 \newcommand{\cf}{{\it cf.}\xspace}
 \newcommand{\etal}{{\it et al.}\xspace}
