--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -4,7 +4,7 @@ Je tiens à remercier ici  l'ensemble des personnes qui m'ont aidées dans mes t
 En premier lieu, je remercie Thierry Colin, professeur à l'université de Bordeaux. Tout d'abord en tant que directeur de stage de découverte de première année de master. Il m'a initié au développement de modèles mathématiques pour la cancérologie et ce fut une très bonne expérience scientifique et humaine. Ensuite, en tant que directeur de thèse, il m'a guidé dans mon travail tout au long de ces 3 ans et m'a aidé à trouver des solutions pour avancer (ou pour ne pas perdre son temps). 
 
 \paragraph{}
-Je remercie aussi Olivier Saut, chargé de recherche CNRS, qui m'a épaulé au cours de ces 3 années également. Il m'a particulièrement aidé sur l'aspect numérique, logicielle et informatique de ma thèse. Je lui suis reconnaissant pour sa patience lors de la résolution des différents problèmes informatiques que j'ai pu rencontré. 
+Je remercie aussi Olivier Saut, chargé de recherche CNRS, qui m'a épaulé au cours de ces 3 années également. Il m'a particulièrement aidé sur l'aspect numérique, logiciel et informatique de ma thèse. Je lui suis reconnaissant pour sa patience lors de la résolution des différents problèmes informatiques que j'ai pu rencontrer. 
 
 \paragraph{}
 Je remercie également Clair Poignard, chargé de recherche INRIA, pour ses lectures et relectures minutieuses et ses corrections effectuées sur l'ensemble de mes productions écrites~: publications et ce manuscrit entre autre.
@@ -25,5 +25,5 @@ Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partag
 Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHYS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'Oncologie}), qui au fil du temps sont devenus bien plus que de simple collègue, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les diverses débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
 
 \paragraph{}
-Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir déceler les fautes et coquilles en tout genre. 
+Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir décelé les fautes et coquilles en tout genre. 
 %Merci notamment à Vinciane, Cynthia
